Working on week 3 and 4 exercises

--- a/exercises/.classpath
+++ b/exercises/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="C:/Users/Brak/.p2/pool/plugins/org.springframework.orm_4.2.3.20151116-RELEASE.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Brak/.p2/pool/plugins/org.springframework.oxm_4.2.3.20151116-RELEASE.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Brak/.p2/pool/plugins/org.springframework.web_4.2.3.20151116-RELEASE.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
