--- a/exercises/.classpath
+++ b/exercises/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Brak/.p2/pool/plugins/org.apache.commons.logging_1.1.1.v201101211721.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Brak/.p2/pool/plugins/org.springframework.beans_4.2.3.20151116-RELEASE.jar"/>
